# sibsutis

./: .gitignore  DEVENV.md  README.md  how_to_build.md  setup.ps1  setup.sh
1_semestr/Programming/kontr/: run.sh
2semester/Programming/10_lab/: run.sh
2semester/Programming/11_lab/: run.sh
2semester/Programming/12_lab/: run.sh
2semester/Programming/5_lab/: run.sh
2semester/Programming/Course_work/: main.cpp
2semester/Programming/Course_work_GUI/: main.cpp  run.sh  student.cpp  student.hpp  studentapp.cpp  studentapp.hpp  studentmanager.cpp  studentmanager.hpp
2semester/SAOD/10_lab/: run.sh
2semester/SAOD/12_lab/: CMakeLists.txt  run.sh
2semester/SAOD/2_lab/: run.sh
2semester/SAOD/5_lab/: run.sh
2semester/SAOD/6_lab/: run.sh
2semester/SAOD/8_lab/: run.sh
2semester/SAOD/9_lab/: run.sh
2semester/SAOD/name_sort/: main.py
3semester/IntTech/1_lab/: index.html
3semester/IntTech/2_lab/: index.html
3semester/IntTech/3_lab/: index.html  script.js  styles.css
3semester/IntTech/4_lab/: package-lock.json  package.json
3semester/IntTech/Lab5_and_CGW/: budget.json  package.json
3semester/IntTech/Store/: .env  .gitignore  Dockerfile  Mocassini.csproj  Mocassini.sln  Program.cs  appsettings.Development.json  docker-compose.yml
3semester/OOP/1_lab/: how_to_run.md
3semester/OOP/2_lab/: CMakeLists.txt  how_to_run.md  main.cpp  run.ps1  run.sh
3semester/OOP/3_lab/: CMakeLists.txt  how_to_run.md  run.ps1  run.sh
3semester/OOP/4_lab/: CMakeLists.txt  how_to_run.md  recipes.txt  run.ps1  run.sh
3semester/OOP/7_lab/: CMakeLists.txt  run.ps1  run.sh
3semester/OOP/Chess/: CMakeLists.txt  CMakeSettings.json
3semester/OOP/ChessImgui/: CMakeLists.txt  CMakeSettings.json  DEPS.md
3semester/SAOD/10_lab/: CMakeLists.txt  how_to_run.md  run.ps1
3semester/SAOD/11_lab/: CMakeLists.txt  how_to_run.md  run.sh
3semester/SAOD/12_lab/: CMakeLists.txt  how_to_run.md  run.ps1
3semester/SAOD/13_lab/: CMakeLists.txt  how_to_run.md  run.ps1  run.sh
3semester/SAOD/1_lab/: CMakeLists.txt  how_to_run.md  main.cpp  run.ps1  run.sh  tree.hpp
3semester/SAOD/2_3_lab/: CMakeLists.txt  how_to_run.md  main.cpp  run.ps1  run.sh
3semester/SAOD/4_lab/: CMakeLists.txt  main.cpp  run.ps1  run.sh
3semester/SAOD/5_lab/: CMakeLists.txt  main.cpp  run.ps1
3semester/SAOD/6_lab/: CMakeLists.txt  how_to_run.md  main.cpp  run.ps1
3semester/SAOD/7_lab/: CMakeLists.txt  how_to_run.md  main.cpp  run.ps1  run.sh
3semester/SAOD/7_lab/include/: AVLTree.hpp  Btree.hpp  tree.hpp
3semester/SAOD/7_lab/src/: main.cpp
3semester/SAOD/8_lab/: CMakeLists.txt  main.cpp  run.ps1  tree.hpp
3semester/SAOD/9_lab/: CMakeLists.txt  run.ps1
3semester/SAOD/CourseWork/: ClassDiagram.cd  db.cpp  (+20 more)
3semester/SAOD/Labs/: CMakeLists.txt  chars.txt  format.ps1  format.sh  how_to_run.md  run.ps1  run.sh
3semester/SAOD/Labs/include/: avl_tree.hpp  b_tree.hpp  base_tree.hpp  coding.hpp  os_tree.hpp  pbs_tree.hpp  rs_tree.hpp  tree_types.hpp
3semester/SAOD/Labs/src/: CMakeLists.txt  avl_tree.cpp  b_tree.cpp  base_tree.cpp  coding.cpp  main.cpp  os_tree.cpp  pbs_tree.cpp  rs_tree.cpp
(+184 files in other folders)
